# meshcore_simv2

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  firmware.json  output.cvs  prepare_gdansk_test.sh  requirements.txt  results_phase1.csv  rxtest.cvs
.engram/: graph.db
.obsidian/: workspace.json
build-pr2141/: CMakeCache.txt  Makefile  cmake_install.cmake
build-pr2141/companion_radio/: Makefile  cmake_install.cmake  companion_radio
build-pr2141/orchestrator/: Makefile  cmake_install.cmake  orchestrator
build-pr2141/simple_repeater/: Makefile  cmake_install.cmake  simple_repeater
companion_radio/: CMakeLists.txt  main.cpp
delay_optimization/: .~lock.results_medium_20260410_093951.csv#  DELAY_OPTIMIZATION.md  SEATTLE_SIMULATIONS.md  dense_test.json  dense_topology.json  gdansk_test.json  mcsim_seattle.json  mcsim_seattle_chatter.json  mcsim_seattle_test.json  medium_test.json  medium_topology.json  results_dense_20260406_192446.csv  results_dense_20260409_133311.csv  results_dense_20260410_112726.csv  results_medium_20260406_192440.csv  results_medium_20260409_133307.csv  results_medium_20260410_112723.csv  results_medium_20260410_193443.csv  results_sparse_20260406_170128.csv  results_sparse_20260409_133301.csv  results_sparse_20260410_112656.csv  results_sparse_20260410_184024.csv  run_baseline.sh  run_dense.sh  run_mcsim_seattle.sh  run_medium.sh  run_medium_validation.sh  run_optimization.sh  run_sparse.sh  run_sweep.sh  run_targeted_nl.sh  run_us_targeted.sh  run_zero_baseline.sh  sparse_test.json  sparse_topology.json  us_test.json  us_topology.json  validation_test.json  validation_topology.json
delay_optimization/0.2-test-incomplete/: results_dense_20260409_194008.csv  results_dense_20260409_210651.csv  results_medium_20260409_194003.csv  results_medium_20260409_210645.csv  results_sparse_20260409_193958.csv  results_sparse_20260409_210642.csv
delay_optimization/0.5-test/: results_dense_20260406_192446.csv
delay_optimization_v2/: .run_sweep.sh.swp  FINAL_PROPOSAL.md  analyze_results.py  dense_test.json  dense_topology.json  functions.lua  medium_test.json  medium_topology.json  results_defaults_dense_20260418_140710.csv  results_defaults_medium_20260418_140710.csv  results_defaults_sparse_20260418_140710.csv  results_defaults_very_dense_20260418_140710.csv  results_dense_20260412_155806.csv  results_dense_20260412_195953.csv  results_dense_20260417_073338.csv  results_dense_20260418_054223.csv  results_medium_20260412_103910.csv  results_medium_20260412_204414.csv  results_medium_20260417_073338.csv  results_medium_20260418_054223.csv  results_rx_dense_20260417_202913.csv  results_rx_medium_20260417_202204.csv  results_rx_sparse_20260417_202526.csv  results_sparse_20260412_153311.csv  results_sparse_20260412_154647.csv  results_sparse_20260412_161837.csv  results_sparse_20260417_073338.csv  results_sparse_20260418_054055.csv  results_very_dense_20260412_104023.csv  results_very_dense_20260412_194518.csv  results_very_dense_20260412_194656.csv  results_very_dense_20260412_194835.csv  results_very_dense_20260413_094225.csv  results_very_dense_20260417_073338.csv  results_very_dense_20260418_054223.csv  run_dense.sh  run_medium.sh  run_sparse.sh  run_sweep.py  run_sweep.sh  (+7 more)
docs/: CONFIG_FORMAT.md  CONVERT_TOPOLOGY.md  DELAY_OPTIMIZATION.md  LUA_SCRIPTING.md  MULTI_FIRMWARE.md  RADIO_MODEL.md  SIMULATION_QUALITY_AUDIT.md  TOPOLOGY_GENERATOR.md
mixed_firmware_validation/: RESULTS.md  generate_configs.py  run_experiment.sh  run_mixed.py
mixed_firmware_validation/configs/: degree_pct000_seed42.json  (+71 more)
orchestrator/: CMakeLists.txt  CompanionMyMesh.cpp  CompanionMyMesh.h  CompanionNode.cpp  EventLog.cpp  EventLog.h  FirmwarePlugin.cpp  FirmwarePlugin.h  InteractiveRepl.cpp  InteractiveRepl.h  JsonConfig.cpp  JsonConfig.h  LinkModel.cpp  LinkModel.h  LuaEngine.cpp  LuaEngine.h  MeshWrapper.h  NodeContext.cpp  NodeContext.h  Orchestrator.cpp  Orchestrator.h  RepeaterMyMesh.cpp  RepeaterMyMesh.h  RepeaterNode.cpp  SimController.cpp  SimController.h  VirtualClock.h  main.cpp
orchestrator/firmware/: CompanionMyMesh.cpp  CompanionMyMesh.h  CompanionNode.cpp  RepeaterMyMesh.cpp  RepeaterNode.cpp  plugin_exports.cpp
orchestrator/lua/: simlib.lua
simple_repeater/: CMakeLists.txt  main.cpp
simulation/: delay_test.json  gdansk_test.json  gdansk_topology.json  topology.json
test/: linear_three.json  lsan_suppressions.txt  run_tests.sh  t01_hot_start_neighbors.json  t02_hot_start_msg.json  t03_cold_start_advert.json  t04_no_link_isolated.json  t05_direct_link_no_relay.json  t06_msg_stats.json  t07_hot_start_grid_10x10.json  t08_msg_schedule.json  t09_airtime_sf8_bw62k_cr4.json  t10_airtime_sf12_bw125k_cr4.json  t11_airtime_sf7_bw125k_cr4.json  t12_airtime_sf8_bw62k_cr1.json  t13_halfduplex_simul_tx.json  t14_halfduplex_rx_blocks_tx.json  t15_halfduplex_sequential_ok.json  t16_halfduplex_tx_aborts_rx.json  t17_msga_ack.json  t18_repeater_neighbors_hot.json  t19_repeater_neighbors_cold.json  t20_repeater_get_set.json  t21_channel_msg.json  t22_channel_schedule.json  t23_capture_first_arrival.json  t24_capture_simultaneous.json  t25_capture_dominant.json  t26_rxdelay_collision.json  t27_rxdelay_snr_order.json  t28_txdelay_zero_collision.json  t29_txdelay_spread.json  t30_tx_fail_requeue.json  t31_direct_path_overhear.json  t32_txdelay_comparison.json  t33_weak_path_fallback.json  t34_delay_bench_butterfly.json  t37_hardware_delays_basic.json  t38_stats_flood_path_split.json  t39_ackpath_radio_efficiency.json  (+12 more)
tools/: README.md  build_real_sim.py  convert_mcsim.py  convert_mcsim_chatter.py  convert_topology.py  firmware.py  gen_grid_test.py  inject_test.py  optimize_delays.py  optimize_tuning.py  raw_topology_stats.py  run_sim.sh  set_delays.py  topology_stats.py
topology_generator/: __main__.py  api_fetch.py  config_emitter.py  propagation.py  terrain.py
visualization/: README.md  map_view.html  visualize.html  visualize.py
webapp/: .dockerignore  ARCHITECTURE.md  Dockerfile  docker-compose.yml  requirements.txt  run.sh
(+113 files in other folders)
